Add card component

--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -7,6 +7,22 @@
 .card__container {
   display: grid;
   gap: 20px;
-  overflow: scroll;
   padding: 20px;
+}
+
+.card__hints {
+  border: 2px solid hotpink;
+  display: flex;
+  justify-content: space-around;
+  padding: 0; /* Einrückung nach links */
+}
+
+.card__hints > li {
+  border: 2px solid hotpink;
+  background-color: steelblue;
+  padding: 5px;
+}
+
+.card__btn {
+  /**/
 }
