--- a/src/scss/_utility.scss
+++ b/src/scss/_utility.scss
@@ -15,3 +15,12 @@
   display: grid;
   gap: 20px;
 }
+
+.noneliststyle {
+  list-style: none;
+}
+
+.flex-center {
+  display: flex;
+  justify-content: center;
+}
