--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -3,7 +3,7 @@
 }
 
 body {
-  font-family: sans-serif;
+  font-family: "Raleway", sans-serif;
   margin: 0;
   background: #efefef;
   color: var(--primary);
@@ -13,6 +13,15 @@ a {
   color: var(--secondary);
 }
 
-button, input, textarea {
+button,
+input,
+textarea {
   font-size: 1em;
+}
+
+main {
+  scroll-padding: 200px;
+}
+
+h1 {
 }
