--- a/src/scss/_utility.scss
+++ b/src/scss/_utility.scss
@@ -7,10 +7,13 @@
   overflow: scroll;
 }
 
-.p-20 {
-  padding: 20px;
+.p-10 {
+  padding: 10px;
 }
 
+.mb-10 {
+  margin-bottom: 10px;
+}
 .gap-20 {
   display: grid;
   gap: 20px;
