--- a/src/scss/components/_navigation.scss
+++ b/src/scss/components/_navigation.scss
@@ -2,18 +2,21 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   gap: 2px;
+  border: lawngreen;
 }
 
 .navigation__link {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #333;
-  color: white;
+  background: white;
   text-decoration: none;
-  font-size: 1.4em;
 }
 
 .navigation__link--active {
   background: hotpink;
+}
+
+.navigation__link > img {
+  width: 48px;
 }
