--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -16,12 +16,28 @@ a {
 button,
 input,
 textarea {
+  font-family: "Raleway", sans-serif;
   font-size: 1em;
+  padding: 10px;
+  margin: 8px 0;
+}
+
+button {
+  display: block;
+  background-color: hotpink;
+  color: white;
+  border: 0;
+  cursor: pointer;
+}
+
+input,
+textarea {
+  border: solid hotpink 1px;
+  border-radius: 4px;
+  width: 100%;
+  outline: none;
 }
 
 main {
   scroll-padding: 200px;
-}
-
-h1 {
 }
