--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -1,8 +1,9 @@
 .card {
   padding: 20px;
-  background: #eee;
-  box-shadow: 0 6px 12px #0005;
+  background: white;
+  /*box-shadow: 0 6px 12px #0005;*/
   border-radius: 20px;
+  border: 1px solid hotpink;
 }
 
 .card__container {
@@ -18,8 +19,9 @@
 }
 
 .card__hints > li {
-  color: white;
+  color: hotpink;
   /* border: white solid 2px;*/
-  background-color: hotpink;
+  background-color: white;
+  border: hotpink solid 1px;
   padding: 10px;
 }
