--- a/src/scss/components/_main-header.scss
+++ b/src/scss/components/_main-header.scss
@@ -2,7 +2,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #ddd;
+  background: hotpink;
   font-size: 1.2em;
   text-transform: uppercase;
+  color: white;
 }
